fixing issue preventing input field from showing properly on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@ div.slide-out {
 	padding: 0 1em;
 	line-height: 3em;
 	box-shadow: inset 0 0 4px #222222;
+	appearance: none;
 	transition: 0.3s;
 	font-size: 0.9rem;
 }
